--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,12 @@
 								"glob": "**/*",
 								"input": "node_modules/monaco-editor",
 								"output": "/assets/monaco/"
-							}
+							},
+              {
+                "glob": "**/*",
+                "input": "node_modules/rxjs",
+                "output": "/assets/rxjs/"
+              }
 						],
 						"styles": [
 							"@angular/material/prebuilt-themes/indigo-pink.css",
