--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,8 @@
 						],
 						"styles": [
 							"@angular/material/prebuilt-themes/indigo-pink.css",
+							"tippy.js/dist/tippy.css",
+							"tippy.js/animations/scale.css",
               "src/theme.scss",
 							"src/styles.scss"
 						],
