--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,10 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist/vizual-rx",
+            "loader": {
+              ".ttf": "file"
+            },
+            "outputPath": "dist/vizual-rx",
 						"index": "src/index.html",
 						"browser": "src/main.ts",
 						"polyfills": [
@@ -52,13 +55,13 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
+									"maximumWarning": "10mb",
+									"maximumError": "20mb"
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
+									"maximumWarning": "500kb",
+									"maximumError": "1mb"
 								}
 							],
 							"outputHashing": "all"
