--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "schematics-scss-migrate": "^2.3.17",
     "typescript": "~5.3.2"
+  },
+  "browser": {
+    "path": false
   }
 }
