--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,8 @@
               "src/theme.scss",
 							"src/styles.scss"
 						],
-						"scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "tsconfig.worker.json"
 					},
 					"configurations": {
 						"production": {
@@ -108,7 +109,8 @@
 							"@angular/material/prebuilt-themes/indigo-pink.css",
 							"src/styles.scss"
 						],
-						"scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "tsconfig.worker.json"
 					}
 				}
 			}
