--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "firebase": "^10.11.0",
     "ngx-monaco-editor-v2": "^17.0.1",
     "path-browserify": "^1.0.1",
     "rxjs": "~7.8.0",
