--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/favicon.ico",
               "src/icon.svg",
               "src/googleef2d19121e9e0463.html",
+              "src/sitemap.txt",
               "src/assets",
               {
                 "glob": "**/*",
