--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "src/icon.svg",
               "src/googleef2d19121e9e0463.html",
               "src/sitemap.txt",
+              "src/robots.txt",
               "src/assets",
               {
                 "glob": "**/*",
